--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,6 +44,13 @@ a {
   opacity: 0.9;
 }
 
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: var(--line-clamp, 2);
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 /* ============= Header ============= */
 .fixed-header {
   background: #e6f0ff;
@@ -256,4 +263,317 @@ a {
 
 .guide-cta .btn {
   min-width: 170px;
+}
+
+/* ============ Featured ============= */
+.featured {
+  margin-top: 41px;
+  padding: 110px 0;
+  background-color: #f5fafe;
+}
+
+.featured .sub-title {
+  color: #000339;
+
+  font-size: 3.5rem;
+
+  font-weight: 600;
+  line-height: 1;
+}
+
+.featured .row {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;
+}
+
+.featured .desc {
+  color: #5a6473;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.875;
+}
+
+.featured .link {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: 1.8rem;
+  color: #0689ff;
+}
+
+.featured .link .arrow {
+  margin-left: 8px;
+  transform: rotate(360deg);
+}
+
+.featured .list {
+  margin-top: 70px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+}
+
+.featured .item {
+  flex: 1;
+  border-radius: 12px;
+  background: #fff;
+}
+
+.featured .item .thumb {
+  width: 100%;
+  height: 227px;
+  object-fit: cover;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
+.featured .item .body {
+  padding: 17px 20px 24px;
+}
+
+.featured .item .title a {
+  color: #000339;
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.5;
+}
+
+.featured .item .desc {
+  margin-top: 11px;
+  color: #a3a6ab;
+  font-size: 14px;
+  font-weight: 500;
+  word-break: break-all;
+}
+
+.featured .item .info {
+  margin-top: 22px;
+  display: flex;
+  align-items: center;
+}
+
+.featured .item .label {
+  color: #4d4d52;
+  margin-left: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1;
+  letter-spacing: 0.01em;
+}
+
+.featured .item .icon {
+  margin-left: 23px;
+}
+
+.featured .item .icon:first-child {
+  margin-left: 0px;
+}
+
+/* ============ Stats============== */
+.stats {
+  margin-top: 75px;
+  padding: 50px 0;
+}
+
+.stats .content {
+  width: 1017px;
+}
+
+.stats .row {
+  display: flex;
+}
+
+.stats .img-block,
+.stats .info {
+  width: 50%;
+}
+
+.stats .img-block {
+  position: relative;
+}
+
+.stats .stats-trend {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  width: 239px;
+  border-radius: 0px 0px 12px 12px;
+  padding: 45px 22px 40px;
+}
+
+.stats .stats-trend .value {
+  color: #000339;
+
+  font-size: 2.6rem;
+  font-weight: 700;
+  line-height: 1; /* 100% */
+  letter-spacing: 0.01em;
+}
+
+.stats .stats-trend .icon {
+  margin-left: auto;
+}
+
+.stats .stats-trend .desc {
+  margin-top: 8px;
+  color: #a7a7a7;
+
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.stats .stats-trend .separate {
+  margin-top: 25px;
+  height: 1.2px;
+  background-color: #e9e9e9;
+}
+
+.stats .stats-trend .avatar-block {
+  margin-top: 26px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 14px 16px;
+}
+
+.stats .avatar-group {
+  display: flex;
+}
+
+.stats .avatar-group .avatar {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  margin-left: -3px;
+  object-fit: cover;
+  color: #fff;
+  text-align: center;
+  font-family: Circular Std;
+  font-size: 7.261px;
+  font-weight: 450;
+  letter-spacing: -0.145px;
+  background-color: var(--bg-color, #fff);
+  line-height: 16px;
+}
+
+.stats .avatar:first-child {
+  margin-left: 0;
+}
+
+.stats .img-block .image {
+  display: block;
+  margin-left: auto;
+  width: 400px;
+  height: 460px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+.stats .info .sub-title {
+  position: relative;
+  color: #000339;
+  font-size: 3.5rem;
+  font-weight: 600;
+  line-height: 1.28571; /* 128.571% */
+  width: 269px;
+}
+
+.stats .info .sub-title::before {
+  position: absolute;
+  content: "";
+  display: block;
+  left: 0;
+  top: -10px;
+  width: 41px;
+  height: 4px;
+  border-radius: 12px;
+  background: #000339;
+}
+
+.stats .info .desc {
+  color: #5a6473;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.875; /* 187.5% */
+  width: 312px;
+  margin-top: 20px;
+}
+
+.stats .info {
+  padding: 79px 0 0 165px;
+}
+
+.stats .row-qty {
+  margin-top: 110px;
+  justify-content: space-between;
+  padding: 0 32px;
+}
+
+.stats .qty {
+  color: #000;
+  font-size: 6.4rem;
+  font-weight: 600;
+  line-height: 1; /* 100% */
+}
+
+.stats .qty-desc {
+  color: #7b8087;
+  margin-top: 22px;
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+/* ============ Subscription ============ */
+.subscription {
+  margin-top: 90px; 
+}
+
+.subscription .body {
+  position: relative;
+  display: flex;
+  align-items: center;
+  background-color: #063183;
+  height: 370px;
+  border-radius: 20px;
+}
+
+.subscription .sub-title {
+  color: #FFF;
+
+font-size: 3.5rem;
+font-weight: 600;
+line-height: 1; /* 100% */
+}
+
+.subscription .info {
+  width: 671px;
+  padding: 0 80px;
+}
+
+.subscription .desc {
+  color: #FFF;
+  margin-top: 15px;
+font-size: 1.6rem;
+font-weight: 400;
+line-height: 1.875; /* 187.5% */
+}
+
+.subscription .btn {
+  border-radius: 12px;
+background: #FFF;
+color: #002366;
+
+text-align: center;
+font-size: 13px;
+font-weight: 500;
+margin-top: 20px;
+min-width: 151px;
+}
+
+.subscription .image {
+  position: absolute;
+  bottom: 0;
+  right: 221px;
 }
