--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -527,7 +527,7 @@ a {
 
 /* ============ Subscription ============ */
 .subscription {
-  margin-top: 90px; 
+  margin-top: 90px;
 }
 
 .subscription .body {
@@ -540,11 +540,11 @@ a {
 }
 
 .subscription .sub-title {
-  color: #FFF;
+  color: #fff;
 
-font-size: 3.5rem;
-font-weight: 600;
-line-height: 1; /* 100% */
+  font-size: 3.5rem;
+  font-weight: 600;
+  line-height: 1; /* 100% */
 }
 
 .subscription .info {
@@ -553,27 +553,103 @@ line-height: 1; /* 100% */
 }
 
 .subscription .desc {
-  color: #FFF;
+  color: #fff;
   margin-top: 15px;
-font-size: 1.6rem;
-font-weight: 400;
-line-height: 1.875; /* 187.5% */
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.875; /* 187.5% */
 }
 
 .subscription .btn {
   border-radius: 12px;
-background: #FFF;
-color: #002366;
+  background: #fff;
+  color: #002366;
 
-text-align: center;
-font-size: 13px;
-font-weight: 500;
-margin-top: 20px;
-min-width: 151px;
+  text-align: center;
+  font-size: 13px;
+  font-weight: 500;
+  margin-top: 20px;
+  min-width: 151px;
 }
 
 .subscription .image {
   position: absolute;
   bottom: 0;
   right: 221px;
+}
+
+/* ========== Footer =========== */
+.footer {
+  margin-top: 55px;
+  padding: 50px 0 58px;
+}
+
+.footer .row-top {
+  display: flex;
+  gap: 185px;
+}
+
+.footer .heading {
+  color: #1c1c1d;
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.footer .list,
+.footer .desc {
+  margin-top: 42px;
+}
+
+.footer .item {
+  margin-top: 18px;
+}
+
+.footer .item a,
+.footer .desc {
+  color: #7a7a7e;
+  font-size: 16px;
+  font-weight: 400;
+  white-space: nowrap;
+}
+
+.footer .desc {
+  white-space: normal;
+  line-height: 1.75;
+}
+
+.footer .social {
+  display: flex;
+  margin-top: 40px;
+}
+
+.footer .social-link {
+  width: 28px;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  background: #f9f9f9;
+}
+
+.footer .social-link + .social-link {
+  margin-left: 16px;
+}
+
+.footer .social-link:hover {
+  background-color: #ebebeb;
+}
+
+.footer .row-bottom {
+  margin-top: 81px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer .copyright {
+  color: #c2c2c2;
+  font-size: 14px;
+  font-weight: 400;
 }
