--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,6 @@ html {
 body {
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
-  height: 2000px;
 }
 
 /* Common */
@@ -57,6 +56,7 @@ a {
   position: sticky;
   padding-top: 26px;
   top: -26px;
+  z-index: 1;
 }
 
 .navbar {
